compiler/py2cc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statementlist
Rule 2     statementlist -> statement
Rule 3     statementlist -> statement statementlist
Rule 4     block -> INDENT statementlist DEDENT
Rule 5     statement -> EOL
Rule 6     statement -> print_statement
Rule 7     statement -> fullexpression
Rule 8     statement -> while_statement
Rule 9     statement -> if_statement
Rule 10    statement -> for_statement
Rule 11    statement -> import_statement
Rule 12    statement -> def_statement
Rule 13    statement -> yield_statement
Rule 14    statement -> assignment_statement
Rule 15    statement -> pass_statement
Rule 16    fullexpression -> or_expression
Rule 17    or_expression -> and_expression
Rule 18    or_expression -> and_expression OR or_expression
Rule 19    and_expression -> not_expression
Rule 20    and_expression -> not_expression AND not_expression
Rule 21    not_expression -> comparison
Rule 22    not_expression -> NOT not_expression
Rule 23    comparison -> expression
Rule 24    comparison -> expression COMP_OP expression
Rule 25    while_statement -> WHILE fullexpression COLON EOL block
Rule 26    if_statement -> IF fullexpression COLON EOL block
Rule 27    if_statement -> IF fullexpression COLON EOL block if_trailer
Rule 28    if_trailer -> elif_clauses
Rule 29    elif_clauses -> elif_clause
Rule 30    elif_clauses -> elif_clause if_trailer
Rule 31    if_trailer -> else_clause
Rule 32    elif_clause -> ELIF fullexpression COLON EOL block
Rule 33    else_clause -> ELSE COLON EOL block
Rule 34    print_statement -> PRINT fullexpression
Rule 35    pass_statement -> PASS
Rule 36    yield_statement -> YIELD fullexpression
Rule 37    assignment_statement -> identifier EQUALS fullexpression
Rule 38    import_statement -> FROM identifier IMPORT identifier
Rule 39    import_statement -> IMPORT identifier
Rule 40    for_statement -> FOR identifier IN fullexpression COLON EOL block
Rule 41    def_statement -> DEF identifier PARENL PARENR COLON EOL block
Rule 42    def_statement -> DEF identifier PARENL ident_list PARENR COLON EOL block
Rule 43    expression -> arith_expression
Rule 44    expression -> arith_expression TIMES expression
Rule 45    expression -> arith_expression DIVIDE expression
Rule 46    expression -> arith_expression POWER expression
Rule 47    arith_expression -> expression_atom
Rule 48    arith_expression -> expression_atom PLUS arith_expression
Rule 49    arith_expression -> expression_atom MINUS arith_expression
Rule 50    expression_atom -> number
Rule 51    expression_atom -> identifier
Rule 52    expression_atom -> string
Rule 53    expression_atom -> boolean
Rule 54    expression_atom -> func_call
Rule 55    expression_atom -> PARENL fullexpression PARENR
Rule 56    func_call -> IDENTIFIER PARENL PARENR
Rule 57    func_call -> IDENTIFIER PARENL expr_list PARENR
Rule 58    number -> NUMBER
Rule 59    number -> MINUS number
Rule 60    string -> STRING
Rule 61    boolean -> TRUE
Rule 62    boolean -> FALSE
Rule 63    identifier -> IDENTIFIER
Rule 64    expr_list -> expression
Rule 65    expr_list -> expression COMMA expr_list
Rule 66    ident_list -> identifier
Rule 67    ident_list -> identifier COMMA ident_list

Terminals, with rules where they appear

AND                  : 20
COLON                : 25 26 27 32 33 40 41 42
COMMA                : 65 67
COMP_OP              : 24
DEDENT               : 4
DEF                  : 41 42
DIVIDE               : 45
ELIF                 : 32
ELSE                 : 33
EOL                  : 5 25 26 27 32 33 40 41 42
EQUALS               : 37
FALSE                : 62
FOR                  : 40
FROM                 : 38
IDENTIFIER           : 56 57 63
IF                   : 26 27
IMPORT               : 38 39
IN                   : 40
INDENT               : 4
MINUS                : 49 59
NOT                  : 22
NUMBER               : 58
OR                   : 18
PARENL               : 41 42 55 56 57
PARENR               : 41 42 55 56 57
PASS                 : 35
PLUS                 : 48
POWER                : 46
PRINT                : 34
STRING               : 60
TIMES                : 44
TRUE                 : 61
WHILE                : 25
YIELD                : 36
error                : 

Nonterminals, with rules where they appear

and_expression       : 17 18
arith_expression     : 43 44 45 46 48 49
assignment_statement : 14
block                : 25 26 27 32 33 40 41 42
boolean              : 53
comparison           : 21
def_statement        : 12
elif_clause          : 29 30
elif_clauses         : 28
else_clause          : 31
expr_list            : 57 65
expression           : 23 24 24 44 45 46 64 65
expression_atom      : 47 48 49
for_statement        : 10
fullexpression       : 7 25 26 27 32 34 36 37 40 55
func_call            : 54
ident_list           : 42 67
identifier           : 37 38 38 39 40 41 42 51 66 67
if_statement         : 9
if_trailer           : 27 30
import_statement     : 11
not_expression       : 19 20 20 22
number               : 50 59
or_expression        : 16 18
pass_statement       : 15
print_statement      : 6
program              : 0
statement            : 2 3
statementlist        : 1 3 4
string               : 52
while_statement      : 8
yield_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statementlist
    (2) statementlist -> . statement
    (3) statementlist -> . statement statementlist
    (5) statement -> . EOL
    (6) statement -> . print_statement
    (7) statement -> . fullexpression
    (8) statement -> . while_statement
    (9) statement -> . if_statement
    (10) statement -> . for_statement
    (11) statement -> . import_statement
    (12) statement -> . def_statement
    (13) statement -> . yield_statement
    (14) statement -> . assignment_statement
    (15) statement -> . pass_statement
    (34) print_statement -> . PRINT fullexpression
    (16) fullexpression -> . or_expression
    (25) while_statement -> . WHILE fullexpression COLON EOL block
    (26) if_statement -> . IF fullexpression COLON EOL block
    (27) if_statement -> . IF fullexpression COLON EOL block if_trailer
    (40) for_statement -> . FOR identifier IN fullexpression COLON EOL block
    (38) import_statement -> . FROM identifier IMPORT identifier
    (39) import_statement -> . IMPORT identifier
    (41) def_statement -> . DEF identifier PARENL PARENR COLON EOL block
    (42) def_statement -> . DEF identifier PARENL ident_list PARENR COLON EOL block
    (36) yield_statement -> . YIELD fullexpression
    (37) assignment_statement -> . identifier EQUALS fullexpression
    (35) pass_statement -> . PASS
    (17) or_expression -> . and_expression
    (18) or_expression -> . and_expression OR or_expression
    (63) identifier -> . IDENTIFIER
    (19) and_expression -> . not_expression
    (20) and_expression -> . not_expression AND not_expression
    (21) not_expression -> . comparison
    (22) not_expression -> . NOT not_expression
    (23) comparison -> . expression
    (24) comparison -> . expression COMP_OP expression
    (43) expression -> . arith_expression
    (44) expression -> . arith_expression TIMES expression
    (45) expression -> . arith_expression DIVIDE expression
    (46) expression -> . arith_expression POWER expression
    (47) arith_expression -> . expression_atom
    (48) arith_expression -> . expression_atom PLUS arith_expression
    (49) arith_expression -> . expression_atom MINUS arith_expression
    (50) expression_atom -> . number
    (51) expression_atom -> . identifier
    (52) expression_atom -> . string
    (53) expression_atom -> . boolean
    (54) expression_atom -> . func_call
    (55) expression_atom -> . PARENL fullexpression PARENR
    (58) number -> . NUMBER
    (59) number -> . MINUS number
    (60) string -> . STRING
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (56) func_call -> . IDENTIFIER PARENL PARENR
    (57) func_call -> . IDENTIFIER PARENL expr_list PARENR

    EOL             shift and go to state 5
    PRINT           shift and go to state 9
    WHILE           shift and go to state 7
    IF              shift and go to state 34
    FOR             shift and go to state 27
    FROM            shift and go to state 37
    IMPORT          shift and go to state 20
    DEF             shift and go to state 12
    YIELD           shift and go to state 30
    PASS            shift and go to state 2
    IDENTIFIER      shift and go to state 31
    NOT             shift and go to state 42
    PARENL          shift and go to state 33
    NUMBER          shift and go to state 29
    MINUS           shift and go to state 11
    STRING          shift and go to state 21
    TRUE            shift and go to state 10
    FALSE           shift and go to state 15

    number                         shift and go to state 3
    statementlist                  shift and go to state 4
    arith_expression               shift and go to state 8
    print_statement                shift and go to state 6
    and_expression                 shift and go to state 18
    expression_atom                shift and go to state 40
    fullexpression                 shift and go to state 13
    assignment_statement           shift and go to state 14
    while_statement                shift and go to state 16
    program                        shift and go to state 17
    statement                      shift and go to state 19
    if_statement                   shift and go to state 22
    yield_statement                shift and go to state 23
    for_statement                  shift and go to state 25
    import_statement               shift and go to state 26
    comparison                     shift and go to state 28
    def_statement                  shift and go to state 32
    string                         shift and go to state 1
    func_call                      shift and go to state 24
    or_expression                  shift and go to state 35
    identifier                     shift and go to state 36
    not_expression                 shift and go to state 38
    pass_statement                 shift and go to state 39
    boolean                        shift and go to state 41
    expression                     shift and go to state 43

state 1

    (52) expression_atom -> string .

    PLUS            reduce using rule 52 (expression_atom -> string .)
    MINUS           reduce using rule 52 (expression_atom -> string .)
    TIMES           reduce using rule 52 (expression_atom -> string .)
    DIVIDE          reduce using rule 52 (expression_atom -> string .)
    POWER           reduce using rule 52 (expression_atom -> string .)
    COMP_OP         reduce using rule 52 (expression_atom -> string .)
    AND             reduce using rule 52 (expression_atom -> string .)
    OR              reduce using rule 52 (expression_atom -> string .)
    EOL             reduce using rule 52 (expression_atom -> string .)
    PRINT           reduce using rule 52 (expression_atom -> string .)
    WHILE           reduce using rule 52 (expression_atom -> string .)
    IF              reduce using rule 52 (expression_atom -> string .)
    FOR             reduce using rule 52 (expression_atom -> string .)
    FROM            reduce using rule 52 (expression_atom -> string .)
    IMPORT          reduce using rule 52 (expression_atom -> string .)
    DEF             reduce using rule 52 (expression_atom -> string .)
    YIELD           reduce using rule 52 (expression_atom -> string .)
    PASS            reduce using rule 52 (expression_atom -> string .)
    IDENTIFIER      reduce using rule 52 (expression_atom -> string .)
    NOT             reduce using rule 52 (expression_atom -> string .)
    PARENL          reduce using rule 52 (expression_atom -> string .)
    NUMBER          reduce using rule 52 (expression_atom -> string .)
    STRING          reduce using rule 52 (expression_atom -> string .)
    TRUE            reduce using rule 52 (expression_atom -> string .)
    FALSE           reduce using rule 52 (expression_atom -> string .)
    DEDENT          reduce using rule 52 (expression_atom -> string .)
    COLON           reduce using rule 52 (expression_atom -> string .)
    $end            reduce using rule 52 (expression_atom -> string .)
    PARENR          reduce using rule 52 (expression_atom -> string .)
    COMMA           reduce using rule 52 (expression_atom -> string .)


state 2

    (35) pass_statement -> PASS .

    EOL             reduce using rule 35 (pass_statement -> PASS .)
    PRINT           reduce using rule 35 (pass_statement -> PASS .)
    WHILE           reduce using rule 35 (pass_statement -> PASS .)
    IF              reduce using rule 35 (pass_statement -> PASS .)
    FOR             reduce using rule 35 (pass_statement -> PASS .)
    FROM            reduce using rule 35 (pass_statement -> PASS .)
    IMPORT          reduce using rule 35 (pass_statement -> PASS .)
    DEF             reduce using rule 35 (pass_statement -> PASS .)
    YIELD           reduce using rule 35 (pass_statement -> PASS .)
    PASS            reduce using rule 35 (pass_statement -> PASS .)
    IDENTIFIER      reduce using rule 35 (pass_statement -> PASS .)
    NOT             reduce using rule 35 (pass_statement -> PASS .)
    PARENL          reduce using rule 35 (pass_statement -> PASS .)
    NUMBER          reduce using rule 35 (pass_statement -> PASS .)
    MINUS           reduce using rule 35 (pass_statement -> PASS .)
    STRING          reduce using rule 35 (pass_statement -> PASS .)
    TRUE            reduce using rule 35 (pass_statement -> PASS .)
    FALSE           reduce using rule 35 (pass_statement -> PASS .)
    DEDENT          reduce using rule 35 (pass_statement -> PASS .)
    $end            reduce using rule 35 (pass_statement -> PASS .)


state 3

    (50) expression_atom -> number .

    PLUS            reduce using rule 50 (expression_atom -> number .)
    MINUS           reduce using rule 50 (expression_atom -> number .)
    TIMES           reduce using rule 50 (expression_atom -> number .)
    DIVIDE          reduce using rule 50 (expression_atom -> number .)
    POWER           reduce using rule 50 (expression_atom -> number .)
    COMP_OP         reduce using rule 50 (expression_atom -> number .)
    AND             reduce using rule 50 (expression_atom -> number .)
    OR              reduce using rule 50 (expression_atom -> number .)
    EOL             reduce using rule 50 (expression_atom -> number .)
    PRINT           reduce using rule 50 (expression_atom -> number .)
    WHILE           reduce using rule 50 (expression_atom -> number .)
    IF              reduce using rule 50 (expression_atom -> number .)
    FOR             reduce using rule 50 (expression_atom -> number .)
    FROM            reduce using rule 50 (expression_atom -> number .)
    IMPORT          reduce using rule 50 (expression_atom -> number .)
    DEF             reduce using rule 50 (expression_atom -> number .)
    YIELD           reduce using rule 50 (expression_atom -> number .)
    PASS            reduce using rule 50 (expression_atom -> number .)
    IDENTIFIER      reduce using rule 50 (expression_atom -> number .)
    NOT             reduce using rule 50 (expression_atom -> number .)
    PARENL          reduce using rule 50 (expression_atom -> number .)
    NUMBER          reduce using rule 50 (expression_atom -> number .)
    STRING          reduce using rule 50 (expression_atom -> number .)
    TRUE            reduce using rule 50 (expression_atom -> number .)
    FALSE           reduce using rule 50 (expression_atom -> number .)
    DEDENT          reduce using rule 50 (expression_atom -> number .)
    COLON           reduce using rule 50 (expression_atom -> number .)
    $end            reduce using rule 50 (expression_atom -> number .)
    PARENR          reduce using rule 50 (expression_atom -> number .)
    COMMA           reduce using rule 50 (expression_atom -> number .)


state 4

    (1) program -> statementlist .

    $end            reduce using rule 1 (program -> statementlist .)


state 5

    (5) statement -> EOL .

    EOL             reduce using rule 5 (statement -> EOL .)
    PRINT           reduce using rule 5 (statement -> EOL .)
    WHILE           reduce using rule 5 (statement -> EOL .)
    IF              reduce using rule 5 (statement -> EOL .)
    FOR             reduce using rule 5 (statement -> EOL .)
    FROM            reduce using rule 5 (statement -> EOL .)
    IMPORT          reduce using rule 5 (statement -> EOL .)
    DEF             reduce using rule 5 (statement -> EOL .)
    YIELD           reduce using rule 5 (statement -> EOL .)
    PASS            reduce using rule 5 (statement -> EOL .)
    IDENTIFIER      reduce using rule 5 (statement -> EOL .)
    NOT             reduce using rule 5 (statement -> EOL .)
    PARENL          reduce using rule 5 (statement -> EOL .)
    NUMBER          reduce using rule 5 (statement -> EOL .)
    MINUS           reduce using rule 5 (statement -> EOL .)
    STRING          reduce using rule 5 (statement -> EOL .)
    TRUE            reduce using rule 5 (statement -> EOL .)
    FALSE           reduce using rule 5 (statement -> EOL .)
    $end            reduce using rule 5 (statement -> EOL .)
    DEDENT          reduce using rule 5 (statement -> EOL .)


state 6

    (6) statement -> print_statement .

    EOL             reduce using rule 6 (statement -> print_statement .)
    PRINT           reduce using rule 6 (statement -> print_statement .)
    WHILE           reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    FOR             reduce using rule 6 (statement -> print_statement .)
    FROM            reduce using rule 6 (statement -> print_statement .)
    IMPORT          reduce using rule 6 (statement -> print_statement .)
    DEF             reduce using rule 6 (statement -> print_statement .)
    YIELD           reduce using rule 6 (statement -> print_statement .)
    PASS            reduce using rule 6 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> print_statement .)
    NOT             reduce using rule 6 (statement -> print_statement .)
    PARENL          reduce using rule 6 (statement -> print_statement .)
    NUMBER          reduce using rule 6 (statement -> print_statement .)
    MINUS           reduce using rule 6 (statement -> print_statement .)
    STRING          reduce using rule 6 (statement -> print_statement .)
    TRUE            reduce using rule 6 (statement -> print_statement .)
    FALSE           reduce using rule 6 (statement -> print_statement .)
    $end            reduce using rule 6 (statement -> print_statement .)
    DEDENT          reduce using rule 6 (statement -> print_statement .)


state 7

    (25) while_statement -> WHILE . fullexpression COLON EOL block
    (16) fullexpression -> . or_expression
    (17) or_expression -> . and_expression
    (18) or_expression -> . and_expression OR or_expression
    (19) and_expression -> . not_expression
    (20) and_expression -> . not_expression AND not_expression
    (21) not_expression -> . comparison
    (22) not_expression -> . NOT not_expression
    (23) comparison -> . expression
    (24) comparison -> . expression COMP_OP expression
    (43) expression -> . arith_expression
    (44) expression -> . arith_expression TIMES expression
    (45) expression -> . arith_expression DIVIDE expression
    (46) expression -> . arith_expression POWER expression
    (47) arith_expression -> . expression_atom
    (48) arith_expression -> . expression_atom PLUS arith_expression
    (49) arith_expression -> . expression_atom MINUS arith_expression
    (50) expression_atom -> . number
    (51) expression_atom -> . identifier
    (52) expression_atom -> . string
    (53) expression_atom -> . boolean
    (54) expression_atom -> . func_call
    (55) expression_atom -> . PARENL fullexpression PARENR
    (58) number -> . NUMBER
    (59) number -> . MINUS number
    (63) identifier -> . IDENTIFIER
    (60) string -> . STRING
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (56) func_call -> . IDENTIFIER PARENL PARENR
    (57) func_call -> . IDENTIFIER PARENL expr_list PARENR

    NOT             shift and go to state 42
    PARENL          shift and go to state 33
    NUMBER          shift and go to state 29
    MINUS           shift and go to state 11
    IDENTIFIER      shift and go to state 31
    STRING          shift and go to state 21
    TRUE            shift and go to state 10
    FALSE           shift and go to state 15

    func_call                      shift and go to state 24
    or_expression                  shift and go to state 35
    expression_atom                shift and go to state 40
    not_expression                 shift and go to state 38
    comparison                     shift and go to state 28
    boolean                        shift and go to state 41
    fullexpression                 shift and go to state 44
    number                         shift and go to state 3
    arith_expression               shift and go to state 8
    identifier                     shift and go to state 45
    expression                     shift and go to state 43
    and_expression                 shift and go to state 18
    string                         shift and go to state 1

state 8

    (43) expression -> arith_expression .
    (44) expression -> arith_expression . TIMES expression
    (45) expression -> arith_expression . DIVIDE expression
    (46) expression -> arith_expression . POWER expression

    COMP_OP         reduce using rule 43 (expression -> arith_expression .)
    AND             reduce using rule 43 (expression -> arith_expression .)
    OR              reduce using rule 43 (expression -> arith_expression .)
    EOL             reduce using rule 43 (expression -> arith_expression .)
    PRINT           reduce using rule 43 (expression -> arith_expression .)
    WHILE           reduce using rule 43 (expression -> arith_expression .)
    IF              reduce using rule 43 (expression -> arith_expression .)
    FOR             reduce using rule 43 (expression -> arith_expression .)
    FROM            reduce using rule 43 (expression -> arith_expression .)
    IMPORT          reduce using rule 43 (expression -> arith_expression .)
    DEF             reduce using rule 43 (expression -> arith_expression .)
    YIELD           reduce using rule 43 (expression -> arith_expression .)
    PASS            reduce using rule 43 (expression -> arith_expression .)
    IDENTIFIER      reduce using rule 43 (expression -> arith_expression .)
    NOT             reduce using rule 43 (expression -> arith_expression .)
    PARENL          reduce using rule 43 (expression -> arith_expression .)
    NUMBER          reduce using rule 43 (expression -> arith_expression .)
    MINUS           reduce using rule 43 (expression -> arith_expression .)
    STRING          reduce using rule 43 (expression -> arith_expression .)
    TRUE            reduce using rule 43 (expression -> arith_expression .)
    FALSE           reduce using rule 43 (expression -> arith_expression .)
    $end            reduce using rule 43 (expression -> arith_expression .)
    DEDENT          reduce using rule 43 (expression -> arith_expression .)
    PARENR          reduce using rule 43 (expression -> arith_expression .)
    COLON           reduce using rule 43 (expression -> arith_expression .)
    COMMA           reduce using rule 43 (expression -> arith_expression .)
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 46
    POWER           shift and go to state 47


state 9

    (34) print_statement -> PRINT . fullexpression
    (16) fullexpression -> . or_expression
    (17) or_expression -> . and_expression
    (18) or_expression -> . and_expression OR or_expression
    (19) and_expression -> . not_expression
    (20) and_expression -> . not_expression AND not_expression
    (21) not_expression -> . comparison
    (22) not_expression -> . NOT not_expression
    (23) comparison -> . expression
    (24) comparison -> . expression COMP_OP expression
    (43) expression -> . arith_expression
    (44) expression -> . arith_expression TIMES expression
    (45) expression -> . arith_expression DIVIDE expression
    (46) expression -> . arith_expression POWER expression
    (47) arith_expression -> . expression_atom
    (48) arith_expression -> . expression_atom PLUS arith_expression
    (49) arith_expression -> . expression_atom MINUS arith_expression
    (50) expression_atom -> . number
    (51) expression_atom -> . identifier
    (52) expression_atom -> . string
    (53) expression_atom -> . boolean
    (54) expression_atom -> . func_call
    (55) expression_atom -> . PARENL fullexpression PARENR
    (58) number -> . NUMBER
    (59) number -> . MINUS number
    (63) identifier -> . IDENTIFIER
    (60) string -> . STRING
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (56) func_call -> . IDENTIFIER PARENL PARENR
    (57) func_call -> . IDENTIFIER PARENL expr_list PARENR

    NOT             shift and go to state 42
    PARENL          shift and go to state 33
    NUMBER          shift and go to state 29
    MINUS           shift and go to state 11
    IDENTIFIER      shift and go to state 31
    STRING          shift and go to state 21
    TRUE            shift and go to state 10
    FALSE           shift and go to state 15

    func_call                      shift and go to state 24
    or_expression                  shift and go to state 35
    expression_atom                shift and go to state 40
    not_expression                 shift and go to state 38
    comparison                     shift and go to state 28
    boolean                        shift and go to state 41
    fullexpression                 shift and go to state 49
    number                         shift and go to state 3
    arith_expression               shift and go to state 8
    identifier                     shift and go to state 45
    expression                     shift and go to state 43
    and_expression                 shift and go to state 18
    string                         shift and go to state 1

state 10

    (61) boolean -> TRUE .

    PLUS            reduce using rule 61 (boolean -> TRUE .)
    MINUS           reduce using rule 61 (boolean -> TRUE .)
    TIMES           reduce using rule 61 (boolean -> TRUE .)
    DIVIDE          reduce using rule 61 (boolean -> TRUE .)
    POWER           reduce using rule 61 (boolean -> TRUE .)
    COMP_OP         reduce using rule 61 (boolean -> TRUE .)
    AND             reduce using rule 61 (boolean -> TRUE .)
    OR              reduce using rule 61 (boolean -> TRUE .)
    COLON           reduce using rule 61 (boolean -> TRUE .)
    EOL             reduce using rule 61 (boolean -> TRUE .)
    PRINT           reduce using rule 61 (boolean -> TRUE .)
    WHILE           reduce using rule 61 (boolean -> TRUE .)
    IF              reduce using rule 61 (boolean -> TRUE .)
    FOR             reduce using rule 61 (boolean -> TRUE .)
    FROM            reduce using rule 61 (boolean -> TRUE .)
    IMPORT          reduce using rule 61 (boolean -> TRUE .)
    DEF             reduce using rule 61 (boolean -> TRUE .)
    YIELD           reduce using rule 61 (boolean -> TRUE .)
    PASS            reduce using rule 61 (boolean -> TRUE .)
    IDENTIFIER      reduce using rule 61 (boolean -> TRUE .)
    NOT             reduce using rule 61 (boolean -> TRUE .)
    PARENL          reduce using rule 61 (boolean -> TRUE .)
    NUMBER          reduce using rule 61 (boolean -> TRUE .)
    STRING          reduce using rule 61 (boolean -> TRUE .)
    TRUE            reduce using rule 61 (boolean -> TRUE .)
    FALSE           reduce using rule 61 (boolean -> TRUE .)
    $end            reduce using rule 61 (boolean -> TRUE .)
    DEDENT          reduce using rule 61 (boolean -> TRUE .)
    PARENR          reduce using rule 61 (boolean -> TRUE .)
    COMMA           reduce using rule 61 (boolean -> TRUE .)


state 11

    (59) number -> MINUS . number
    (58) number -> . NUMBER
    (59) number -> . MINUS number

    NUMBER          shift and go to state 29
    MINUS           shift and go to state 11

    number                         shift and go to state 50

state 12

    (41) def_statement -> DEF . identifier PARENL PARENR COLON EOL block
    (42) def_statement -> DEF . identifier PARENL ident_list PARENR COLON EOL block
    (63) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 51

    identifier                     shift and go to state 52

state 13

    (7) statement -> fullexpression .

    EOL             reduce using rule 7 (statement -> fullexpression .)
    PRINT           reduce using rule 7 (statement -> fullexpression .)
    WHILE           reduce using rule 7 (statement -> fullexpression .)
    IF              reduce using rule 7 (statement -> fullexpression .)
    FOR             reduce using rule 7 (statement -> fullexpression .)
    FROM            reduce using rule 7 (statement -> fullexpression .)
    IMPORT          reduce using rule 7 (statement -> fullexpression .)
    DEF             reduce using rule 7 (statement -> fullexpression .)
    YIELD           reduce using rule 7 (statement -> fullexpression .)
    PASS            reduce using rule 7 (statement -> fullexpression .)
    IDENTIFIER      reduce using rule 7 (statement -> fullexpression .)
    NOT             reduce using rule 7 (statement -> fullexpression .)
    PARENL          reduce using rule 7 (statement -> fullexpression .)
    NUMBER          reduce using rule 7 (statement -> fullexpression .)
    MINUS           reduce using rule 7 (statement -> fullexpression .)
    STRING          reduce using rule 7 (statement -> fullexpression .)
    TRUE            reduce using rule 7 (statement -> fullexpression .)
    FALSE           reduce using rule 7 (statement -> fullexpression .)
    $end            reduce using rule 7 (statement -> fullexpression .)
    DEDENT          reduce using rule 7 (statement -> fullexpression .)


state 14

    (14) statement -> assignment_statement .

    EOL             reduce using rule 14 (statement -> assignment_statement .)
    PRINT           reduce using rule 14 (statement -> assignment_statement .)
    WHILE           reduce using rule 14 (statement -> assignment_statement .)
    IF              reduce using rule 14 (statement -> assignment_statement .)
    FOR             reduce using rule 14 (statement -> assignment_statement .)
    FROM            reduce using rule 14 (statement -> assignment_statement .)
    IMPORT          reduce using rule 14 (statement -> assignment_statement .)
    DEF             reduce using rule 14 (statement -> assignment_statement .)
    YIELD           reduce using rule 14 (statement -> assignment_statement .)
    PASS            reduce using rule 14 (statement -> assignment_statement .)
    IDENTIFIER      reduce using rule 14 (statement -> assignment_statement .)
    NOT             reduce using rule 14 (statement -> assignment_statement .)
    PARENL          reduce using rule 14 (statement -> assignment_statement .)
    NUMBER          reduce using rule 14 (statement -> assignment_statement .)
    MINUS           reduce using rule 14 (statement -> assignment_statement .)
    STRING          reduce using rule 14 (statement -> assignment_statement .)
    TRUE            reduce using rule 14 (statement -> assignment_statement .)
    FALSE           reduce using rule 14 (statement -> assignment_statement .)
    $end            reduce using rule 14 (statement -> assignment_statement .)
    DEDENT          reduce using rule 14 (statement -> assignment_statement .)


state 15

    (62) boolean -> FALSE .

    PLUS            reduce using rule 62 (boolean -> FALSE .)
    MINUS           reduce using rule 62 (boolean -> FALSE .)
    TIMES           reduce using rule 62 (boolean -> FALSE .)
    DIVIDE          reduce using rule 62 (boolean -> FALSE .)
    POWER           reduce using rule 62 (boolean -> FALSE .)
    COMP_OP         reduce using rule 62 (boolean -> FALSE .)
    AND             reduce using rule 62 (boolean -> FALSE .)
    OR              reduce using rule 62 (boolean -> FALSE .)
    COLON           reduce using rule 62 (boolean -> FALSE .)
    EOL             reduce using rule 62 (boolean -> FALSE .)
    PRINT           reduce using rule 62 (boolean -> FALSE .)
    WHILE           reduce using rule 62 (boolean -> FALSE .)
    IF              reduce using rule 62 (boolean -> FALSE .)
    FOR             reduce using rule 62 (boolean -> FALSE .)
    FROM            reduce using rule 62 (boolean -> FALSE .)
    IMPORT          reduce using rule 62 (boolean -> FALSE .)
    DEF             reduce using rule 62 (boolean -> FALSE .)
    YIELD           reduce using rule 62 (boolean -> FALSE .)
    PASS            reduce using rule 62 (boolean -> FALSE .)
    IDENTIFIER      reduce using rule 62 (boolean -> FALSE .)
    NOT             reduce using rule 62 (boolean -> FALSE .)
    PARENL          reduce using rule 62 (boolean -> FALSE .)
    NUMBER          reduce using rule 62 (boolean -> FALSE .)
    STRING          reduce using rule 62 (boolean -> FALSE .)
    TRUE            reduce using rule 62 (boolean -> FALSE .)
    FALSE           reduce using rule 62 (boolean -> FALSE .)
    $end            reduce using rule 62 (boolean -> FALSE .)
    DEDENT          reduce using rule 62 (boolean -> FALSE .)
    PARENR          reduce using rule 62 (boolean -> FALSE .)
    COMMA           reduce using rule 62 (boolean -> FALSE .)


state 16

    (8) statement -> while_statement .

    EOL             reduce using rule 8 (statement -> while_statement .)
    PRINT           reduce using rule 8 (statement -> while_statement .)
    WHILE           reduce using rule 8 (statement -> while_statement .)
    IF              reduce using rule 8 (statement -> while_statement .)
    FOR             reduce using rule 8 (statement -> while_statement .)
    FROM            reduce using rule 8 (statement -> while_statement .)
    IMPORT          reduce using rule 8 (statement -> while_statement .)
    DEF             reduce using rule 8 (statement -> while_statement .)
    YIELD           reduce using rule 8 (statement -> while_statement .)
    PASS            reduce using rule 8 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> while_statement .)
    NOT             reduce using rule 8 (statement -> while_statement .)
    PARENL          reduce using rule 8 (statement -> while_statement .)
    NUMBER          reduce using rule 8 (statement -> while_statement .)
    MINUS           reduce using rule 8 (statement -> while_statement .)
    STRING          reduce using rule 8 (statement -> while_statement .)
    TRUE            reduce using rule 8 (statement -> while_statement .)
    FALSE           reduce using rule 8 (statement -> while_statement .)
    $end            reduce using rule 8 (statement -> while_statement .)
    DEDENT          reduce using rule 8 (statement -> while_statement .)


state 17

    (0) S' -> program .



state 18

    (17) or_expression -> and_expression .
    (18) or_expression -> and_expression . OR or_expression

    EOL             reduce using rule 17 (or_expression -> and_expression .)
    PRINT           reduce using rule 17 (or_expression -> and_expression .)
    WHILE           reduce using rule 17 (or_expression -> and_expression .)
    IF              reduce using rule 17 (or_expression -> and_expression .)
    FOR             reduce using rule 17 (or_expression -> and_expression .)
    FROM            reduce using rule 17 (or_expression -> and_expression .)
    IMPORT          reduce using rule 17 (or_expression -> and_expression .)
    DEF             reduce using rule 17 (or_expression -> and_expression .)
    YIELD           reduce using rule 17 (or_expression -> and_expression .)
    PASS            reduce using rule 17 (or_expression -> and_expression .)
    IDENTIFIER      reduce using rule 17 (or_expression -> and_expression .)
    NOT             reduce using rule 17 (or_expression -> and_expression .)
    PARENL          reduce using rule 17 (or_expression -> and_expression .)
    NUMBER          reduce using rule 17 (or_expression -> and_expression .)
    MINUS           reduce using rule 17 (or_expression -> and_expression .)
    STRING          reduce using rule 17 (or_expression -> and_expression .)
    TRUE            reduce using rule 17 (or_expression -> and_expression .)
    FALSE           reduce using rule 17 (or_expression -> and_expression .)
    $end            reduce using rule 17 (or_expression -> and_expression .)
    DEDENT          reduce using rule 17 (or_expression -> and_expression .)
    PARENR          reduce using rule 17 (or_expression -> and_expression .)
    COLON           reduce using rule 17 (or_expression -> and_expression .)
    OR              shift and go to state 53


state 19
